Added the markup to the html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1 id="main-heading">Favorite Movie Franchise</h1>
+        <ul>
+            <li class="list-items">The matrix</li>
+            <li class="list-items">Star Wars</li>
+            <li class="list-items">Harry Potter</li>
+            <li class="list-items">Lord Of The Rings</li>
+            <li class="list-items">Marvel</li>
+        </ul>
+    </div>
 
     <script src="app.js"></script>
 </body>
