Added a span to the first list item

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="container">
         <h1 id="main-heading">Favorite Movie Franchise</h1>
         <ul>
-            <li class="list-items">The matrix</li>
+            <li class="list-items">
+                <span>Neo</span>
+                The matrix
+            </li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord Of The Rings</li>
