Spaced out the markup code

--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
                 <span>Neo</span>
                 The matrix
             </li>
-            <li class="list-items">Star Wars</li>
-            <li class="list-items">Harry Potter</li>
-            <li class="list-items">Lord Of The Rings</li>
-            <li class="list-items">Marvel</li>
+            <li class="list-items">
+                Star Wars
+            </li>
+            <li class="list-items">
+                Harry Potter
+            </li>
+            <li class="list-items">
+                Lord Of The Rings
+            </li>
+            <li class="list-items">
+                Marvel
+            </li>
         </ul>
     </div>
 
