Changed the markup

--- a/index.html
+++ b/index.html
@@ -11,23 +11,17 @@
 
 <body>
     <div class="container">
-        <div class="card">
-            <div class="card-text">
-                Example 1
-            </div>
-            <button class="button">Enter</button>
+        <div class="boxes box-1">
+            <h1>Example 1</h1>
+            <button>Enter</button>
         </div>
-        <div class="card">
-            <div class="card-text">
-                Example 2
-            </div>
-            <button class="button">Enter</button>
+        <div class="boxes box-2">
+            <h1>Example 2</h1>
+            <button>Enter</button>
         </div>
-        <div class="card">
-            <div class="card-text">
-                Example 3
-            </div>
-            <button class="button">Enter</button>
+        <div class="boxes box-3">
+            <h1>Example 3</h1>
+            <button>Enter</button>
         </div>
     </div>
 
