Added an inline onclick event listener to the first button of the items

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="boxes box-1">
             <h1>Example 1</h1>
-            <button>Enter</button>
+            <button onclick="alert('Pressed the first button')">Enter</button>
         </div>
         <div class="boxes box-2">
             <h1>Example 2</h1>
