--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container">
         <div class="boxes box-1">
             <h1>Example 1</h1>
-            <button class="btn-1" onclick="alert('Pressed the first button')">Enter</button>
+            <button class="btn btn-1" onclick="alert('Pressed the first button')">Enter</button>
         </div>
         <div class="boxes box-2">
             <h1>Example 2</h1>
-            <button class="btn-2">Enter</button>
+            <button class="btn btn-2">Enter</button>
         </div>
         <div class="boxes box-3">
             <h1>Example 3</h1>
-            <button class="btn-3">Enter</button>
+            <button class="btn btn-3">Enter</button>
         </div>
     </div>
 
