--- a/index.html
+++ b/index.html
@@ -6,24 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>JS DOM manipulation</title>
+    <title>More about event listeners</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="boxes box-1">
-            <h1>Example 1</h1>
-            <button class="btn btn-1" onclick="alert('Pressed the first button')">Enter</button>
-        </div>
-        <div class="boxes box-2">
-            <h1>Example 2</h1>
-            <button class="btn btn-2">Enter</button>
-        </div>
-        <div class="boxes box-3">
-            <h1>Example 3</h1>
-            <button class="btn btn-3">Enter</button>
-        </div>
-    </div>
 
     <script src="app.js"></script>
 </body>
