Changed the html markup

--- a/index.html
+++ b/index.html
@@ -10,25 +10,16 @@
 </head>
 
 <body>
-    <h1 id="main-heading">Event Listeners</h1>
-
-    <div class="container">
-        <button class="reveal-btn boxes">Reveal More</button>
-        <div class="hidden-content boxes">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam ut consequuntur rem eaque dolores beatae
-            minus sunt culpa. Fuga, officia nostrum repellendus id iusto, ipsa iure, perferendis dignissimos adipisci
-            quas deleniti. Explicabo optio eveniet aut fugiat accusamus illum laudantium harum ad, voluptas labore et
-            neque sequi nisi consectetur aspernatur commodi perferendis dolor ab perspiciatis, reiciendis ipsa aperiam.
-            Amet ipsum error laudantium at ex deleniti eos facere quo omnis quisquam quam ipsam ratione consectetur
-            voluptatem excepturi temporibus vero dolores beatae doloribus, ea sed nam sequi! Dignissimos voluptatibus
-            magnam, dolorum obcaecati doloremque totam dicta quis, doloribus accusantium deleniti dolores itaque
-            voluptas hic, libero error nulla reiciendis perspiciatis alias asperiores exercitationem nostrum laborum!
-            Recusandae eveniet nihil velit nemo repellat modi aperiam commodi quam rerum, atque quas corporis pariatur
-            consequuntur provident, illo consequatur nesciunt voluptatum possimus? Id dignissimos molestias optio
-            eligendi eius debitis nobis, minus aspernatur nam asperiores consectetur possimus culpa autem illum.
-            Placeat.
+    <div class="div2">
+        2
+        <div class="div1">
+            1
+            <button>
+                Click
+            </button>
         </div>
     </div>
+
     <script src="app.js"></script>
 </body>
 
