--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 
 <body>
-    <div class="div2">
-        2
-        <div class="div1">
-            1
-            <button>
-                Click
-            </button>
-        </div>
-    </div>
+    <ul id="sports">
+        <li id="football">football</li>
+        <li id="basketball">basketball</li>
+        <li id="boxing">boxing</li>
+        <li id="tennis">tennis</li>
+        <li id="golf">golf</li>
+    </ul>
 
     <script src="app.js"></script>
 </body>
