--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>More about event listeners</title>
+    <title>Black Dynamite</title>
 </head>
 
 <body>
-    <ul id="sports">
-        <li id="football">football</li>
-        <li id="basketball">basketball</li>
-        <li id="boxing">boxing</li>
-        <li id="tennis">tennis</li>
-        <li id="golf">golf</li>
-    </ul>
 
     <script src="app.js"></script>
 </body>
