Modified the markup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">
+            <h2>Javascript Quote Generator</h2>
+        </div>
+        <div class="main-content">
+            <div class="text-area">
+                <span class="quote">
+                    "I do the very best I know how - the very best I can; and I mean to keep on doing so till the end"
+                </span>
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
