Added a markup section to show the person credited with the quote

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     "I do the very best I know how - the very best I can; and I mean to keep on doing so till the end"
                 </span>
             </div>
+            <div class="person">
+                Abraham Lincoln
+            </div>
         </div>
     </div>
 
