--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <div class="person">
                 Abraham Lincoln
             </div>
+            <div class="button-area">
+                <button id="new-quote">
+                    New Quote
+                </button>
+            </div>
         </div>
     </div>
 
