--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 </head>
 
 <body>
+    <button id="open-btn">
+        <p>Where's the modal</p>
+    </button>
 
+    <div id="modal-container">
+        <div id="modal">
+            <p>I am a modal</p>
+            <div id="close-btn">&times;</div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
