Added markup to the html file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,44 @@
 </head>
 
 <body>
+    <div class="accordion">
+        <h2 class="accordion-title">
+            Frequently Asked Questions
+        </h2>
+        <div class="content-container">
+            <div class="question">
+                What is the return policy?
+            </div>
+            <div class="answer">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquam recusandae eveniet ea inventore
+                fugit neque consectetur, earum nulla doloribus accusantium natus expedita animi at quos explicabo
+                laboriosam, quam quisquam vero quae. Minus, cumque ratione sapiente porro incidunt iste, quidem nam
+                esse, error nihil architecto optio cum eos beatae autem.
+            </div>
+        </div>
+        <div class="content-container">
+            <div class="question">
+                What is the return policy?
+            </div>
+            <div class="answer">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquam recusandae eveniet ea inventore
+                fugit neque consectetur, earum nulla doloribus accusantium natus expedita animi at quos explicabo
+                laboriosam, quam quisquam vero quae. Minus, cumque ratione sapiente porro incidunt iste, quidem nam
+                esse, error nihil architecto optio cum eos beatae autem.
+            </div>
+        </div>
+        <div class="content-container">
+            <div class="question">
+                What is the return policy?
+            </div>
+            <div class="answer">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquam recusandae eveniet ea inventore
+                fugit neque consectetur, earum nulla doloribus accusantium natus expedita animi at quos explicabo
+                laboriosam, quam quisquam vero quae. Minus, cumque ratione sapiente porro incidunt iste, quidem nam
+                esse, error nihil architecto optio cum eos beatae autem.
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
