--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 </head>
 
 <body>
+    <div class="container">
+        <div id="timer">
+            00:00:00
+        </div>
 
+        <div class="buttons">
+            <button id="startStopBtn">
+                <i class="fa-solid fa-play" id="play"></i>
+            </button>
+            <button id="reset">
+                <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+            </button>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
