--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="startStopBtn">
                 <i class="fa-solid fa-play" id="play"></i>
             </button>
-            <button id="reset">
+            <button id="resetBtn">
                 <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
             </button>
         </div>
