Defined the markup of the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
+    <div class="container">
+        <div id="add-task-container">
+            <input type="text" name="" id="input" placeholder="Enter Task">
+            <button id="add-task">
+                <i class="fa-solid fa-plus"></i>
+            </button>
+        </div>
+        <div id="task-container">
 
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
